# jitevm

./: .gitignore  Cargo.toml  build.rs  generator.rs
benches/: evm_bench.rs
evm-dynamic/: Cargo.toml
evm-dynamic/src/: evm_3bdc8674d4fde9f9dca23aa564ca243190a69977674148c40a8661f542582a4d.rs  evm_fe52880d7fca1f585e267c77d696523fb89925f31407bf97886a622217e1c3bd.rs  fib.rs  lib.rs  primitives.rs
src/: code.rs  generator.rs  jit.rs  lib.rs  main.rs  test_data.rs
